Types and docs cleanup
